k8s/app-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: default
spec:
  replicas: ${WEATHER_APP_REPLICAS_MIN}
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: "${APP_IMAGE}"
        ports:
        - containerPort: 80
        imagePullPolicy: Always 
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            cpu: "5m"
            memory: "8Mi"
          limits:
            cpu: "10m"
            memory: "16Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: default
spec:
  selector:
    app: app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
