k8s/game-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game
  namespace: default
  labels:
    app: game
spec:
  replicas: ${GAME_REPLICAS_MIN}
  selector:
    matchLabels:
      app: game
  template:
    metadata:
      labels:
        app: game
    spec:
      containers:
      - name: game
        image: quay.io/milkowski/2048:latest
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            cpu: "5m"
            memory: "8Mi"
          limits:
            cpu: "10m"
            memory: "16Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: game-service
  namespace: default
spec:
  selector:
    app: game
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
