k8s/weather-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-service
  namespace: default
  labels:
    app: weather
    version: v1
    component: backend
spec:
  selector:
    app: weather
    version: v1
    component: backend
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
